[gd_scene load_steps=2 format=3 uid="uid://bsqxp8hnw2h3x"]

[ext_resource type="Script" uid="uid://ca5ycx5opedgo" path="res://src/tools/paper_burn_area.gd" id="1_4d31c"]

[node name="PaperBurnArea" type="Area3D"]
collision_layer = 0
collision_mask = 128
monitorable = false
script = ExtResource("1_4d31c")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
